--- a/package.json
+++ b/package.json
@@ -1,19 +1,32 @@
 {
-  "name": "ozhan_yilmaz",
-  "version": "1.0.0",
-  "description": "Ozhan Yilmaz",
-  "main": "index.js",
+  "name": "temp",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "compile:sass": "node-sass sass/main.scss css/style.css -w",
-    "deploy": "gh-pages -d dist"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "node-sass": "^4.7.2"
-  },
-  "homepage": "https://ozhann.github.io/portfolio-website/",
   "dependencies": {
-    "gh-pages": "^2.2.0"
+    "@next/font": "13.1.6",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.27",
+    "@types/react-dom": "18.0.10",
+    "eslint": "8.32.0",
+    "eslint-config-next": "13.1.6",
+    "next": "13.1.6",
+    "next-themes": "^0.2.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "react-scroll": "^1.8.9",
+    "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/react-scroll": "^1.8.6",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
